fixed merge spacing issue
fixed merge spacing issue

--- a/css/blogStyles.css
+++ b/css/blogStyles.css
@@ -36,7 +36,7 @@ body{
     margin-top: 15vh;
 }
 .card{
-    width: auto;
+    width: 22vw;
     height: 69vh;
     background: #fff;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
@@ -51,7 +51,7 @@ body{
     transform: scale(1.1);
 }
 .card figure img{
-    width: auto;
+    width: 22vw;
     height: 32vh;
     border-radius: 10px 10px 0 0;
 }
